fix tenants list layout issue

--- a/AzureFunctions.AngularClient/src/app/top-bar/top-bar.component.scss
+++ b/AzureFunctions.AngularClient/src/app/top-bar/top-bar.component.scss
@@ -70,6 +70,8 @@
     background-color: #E6E7E8;
     color: $primary-color;
     height: $top-bar-height;
+    position: relative;
+    z-index: 1;
 
     .left {
         float: left;
